# Dorker

./: .gitignore  README.md  pyproject.toml
data/: dorking_cheat_sheet.md
src/: __init__.py  banner.py  config.py  main.py
src/cli/: __init__.py  interface.py  prompts.py
src/core/: __init__.py  _format.py  history.py  models.py  opendir.py  query_builder.py
src/utils/: __init__.py  clipboard.py  files.py
