[project]
name = "dorker"
version = "0.1.0"
description = "A hacker-style interactive CLI to craft powerful Google dorking queries for OSINT."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.7.0",
    "pyperclip>=1.8.2",
]

[project.scripts]
dorker = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
